--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
       <i class="fa-solid fa-trophy"></i>
       <h2>Infosys Certification</h2>
       <p>Infosys Springboard</p>
-      <a href="certificates/infosys.jpeg" target="_blank">View Certificate</a>
+      <a href="infosys.jpeg" target="_blank">View Certificate</a>
     </div>
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
       <h2>GeeksforGeeks</h2>
       <p>Generative AI, LLM & RAG</p>
-      <a href="certificates/gfg.jpeg" target="_blank">View Certificate</a>
+      <a href="gfg.jpeg" target="_blank">View Certificate</a>
     </div>
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
       <h2>NPTEL</h2>
       <p>Software Engineering</p>
-      <a href="certificates/nptel.pdf" target="_blank">View Certificate</a>
+      <a href="nptel.pdf" target="_blank">View Certificate</a>
     </div>
 
   </div>
@@ -226,4 +226,5 @@
 </script>
 
 </body>
+
 </html> 
