--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
       <a href="nptel.pdf" target="_blank">View Certificate</a>
     </div>
 
+    <div class="project-card project-content">
+      <i class="fa-solid fa-trophy"></i>
+      <h2>AWS Certification</h2>
+      <p>Cloud Fundamentals</p>
+      <a href="certificates/AWS2026.pdf" target="_blank">View Certificate</a>
+    </div>
+
+    <div class="project-card project-content">
+      <i class="fa-solid fa-trophy"></i>
+      <h2>Linux Certification</h2>
+      <p>Linux Basics</p>
+      <a href="certificates/linux.pdf" target="_blank">View Certificate</a>
+    </div>
+
   </div>
 </section>
 
@@ -228,4 +242,5 @@
 </body>
 
 </html> 
+
 
