--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
-      <h2>AWS Certification</h2>
+      <h2>AWS</h2>
       <p>Cloud Fundamentals</p>
-      <a href="certificates/AWS2026.pdf" target="_blank">View Certificate</a>
+      <a href="AWS2026.pdf" target="_blank">View Certificate</a>
     </div>
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
-      <h2>Linux Certification</h2>
+      <h2>Linux</h2>
       <p>Linux Basics</p>
-      <a href="certificates/linux.pdf" target="_blank">View Certificate</a>
+      <a href="linux.pdf" target="_blank">View Certificate</a>
     </div>
 
   </div>
@@ -242,5 +242,6 @@
 </body>
 
 </html> 
+
 
 
