--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
-      <h2>AWS</h2>
+      <h2>AWS2026</h2>
       <p>Cloud Fundamentals</p>
       <a href="AWS2026.pdf" target="_blank">View Certificate</a>
     </div>
 
     <div class="project-card project-content">
       <i class="fa-solid fa-trophy"></i>
-      <h2>Linux</h2>
+      <h2>linux</h2>
       <p>Linux Basics</p>
       <a href="linux.pdf" target="_blank">View Certificate</a>
     </div>
@@ -242,6 +242,7 @@
 </body>
 
 </html> 
+
 
 
 
